added table of contents

--- a/thesis/thesis/content/titlepages.tex
+++ b/thesis/thesis/content/titlepages.tex
@@ -21,8 +21,8 @@
 	\tgherosfont
 	\centering
 
-	{\Large \thesisUniversity} \\[4mm]
 	\includegraphics[width=6cm]{gfx/tud_logo} \\[2mm]
+	{\Large \thesisUniversity} \\[4mm]
 	\textsf{\thesisUniversityDepartment} \\
 	\textsf{\thesisUniversityInstitute} \\
 	\textsf{\thesisUniversityGroup} \\
@@ -30,6 +30,9 @@
 	\vfill
 	{\large \thesisSubject} \\[5mm]
 	{\LARGE \color{ctcolortitle}\textbf{\thesisTitle} \\[10mm]}
+	\centering
+	\includegraphics[width=5cm]{gfx/rain_logo} \\[2mm]
+	\vfill
 	{\Large \thesisName} \\
 
 	\vfill
