--- a/thesis/thesis/bib-refs.bib
+++ b/thesis/thesis/bib-refs.bib
@@ -1,53 +1,34 @@
-@online{WEB:GNU:GPL:2010,
-	Author = {{Free Software Foundation, Inc.}},
-	Title = {GNU General Public License},
-	Url = {http://www.gnu.org/licenses/gpl.html},
-	Urldate = {2011-05-27},
-	Year = {2010}}
+@article{Sutherland1968,
+abstract = {Sutherland, Ivan E., A Head-Mounted, Three-Dimensional Display,” AFIPS Proceedings of the Fall Joint Computer Conference, Part I, pp. 757-764, 1968.},
+author = {Sutherland, Ivan E},
+doi = {10.1145/1476589.1476686},
+file = {:C$\backslash$:/Users/Sinthu/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Sutherland - 1968 - A Head-Mounted, Three-Dimensional Display.pdf:pdf},
+isbn = {158113052X},
+journal = {AFIPS Proceedings of the Fall Joint Computer Conference},
+mendeley-groups = {Bachelorarbeit/nicht allzu relevante Zusatzquellen},
+number = {16},
+pages = {757--764},
+title = {{A Head-Mounted, Three-Dimensional Display}},
+volume = {Part I},
+year = {1968}
+}
 
-@online{WEB:Miede:2011,
-	Author = {Andr{\'e} Miede},
-	Title = {A Classic Thesis Style by Andr{\'e} Miede},
-	Url = {http://www.miede.de/index.php?page=classicthesis},
-	Urldate = {2011-05-27},
-	Year = {2011}}
+@article{Feiner1997,
+author = {Feiner, Steven and Macintyre, Blair and Webster, Anthony},
+file = {:C$\backslash$:/Users/Sinthu/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Feiner, Macintyre, Webster - 1997 - A Touring Machine Prototyping 3D Mobile Augmented Reality Systems for Exploring the Urban Environmen.pdf:pdf},
+isbn = {0818681926},
+mendeley-groups = {Bachelorarbeit},
+pages = {74--81},
+title = {{A Touring Machine: Prototyping 3D Mobile Augmented Reality Systems for Exploring the Urban Environment}},
+volume = {97},
+year = {1997}
+}
 
-@book{Jurgens:2000,
-	Author = {Manuela J{\"u}rgens},
-	Publisher = {FernUniversit{\"a}t Gesamthochschule in Hagen},
-	Title = {LaTeX: eine Einf{\"u}hrung und ein bisschen mehr},
-	Year = {2000}}
-
-@book{Jurgens:1995,
-	Author = {Manuela J{\"u}rgens},
-	Publisher = {FernUniversit{\"a}t Gesamthochschule in Hagen},
-	Title = {LaTeX: Fortgeschrittene Anwendungen},
-	Year = {1995}}
-
-@manual{Miede:2011,
-	Author = {Andr{\'e} Miede},
-	Title = {A Classic Thesis Style: An Homage to The Elements of Typographic Style},
-	Year = {2011}}
-
-@book{Kohm:2011,
-	Author = {Markus Kohm and Jens-Uwe-Morawski},
-	Title = {KOMA-Script: Die Anleitung},
-	Year = {2011}}
-
-@book{Apple:keynote:2010,
-	Author = {{Apple Inc.}},
-	Publisher = {{Apple Inc.}},
-	Title = {Keynote '09 User Guide},
-	Year = {2010}}
-
-@book{Apple:numbers:2010,
-	Author = {{Apple Inc.}},
-	Publisher = {{Apple Inc.}},
-	Title = {Numbers '09 User Guide},
-	Year = {2010}}
-
-@book{Apple:pages:2010,
-	Author = {{Apple Inc.}},
-	Publisher = {{Apple Inc.}},
-	Title = {Pages '09 User Guide},
-	Year = {2010}}
+@article{Perey2013,
+author = {Perey, Christine and Terenzi, Graziano},
+file = {:C$\backslash$:/Users/Sinthu/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Perey, Terenzi - 2013 - Augmented Reality-Assisted 3D Visualization for Urban Professional Users.pdf:pdf},
+mendeley-groups = {Bachelorarbeit},
+number = {October},
+title = {{Augmented Reality-Assisted 3D Visualization for Urban Professional Users}},
+year = {2013}
+}
