--- a/thesis/thesis/content/chapter-introduction.tex
+++ b/thesis/thesis/content/chapter-introduction.tex
@@ -8,12 +8,9 @@
 \Blindtext[2][2]
 
 \section{Motivation der Arbeit und Problemstellung}
-\label{sec:intro:address}
+\label{sec:intro:motivation}
 
-\textbf{Ricardo Langner} \\
-Alfred-Schrapel-Str. 7 \\
-01307 Dresden \\
-Germany
+
 
 
 \section{Abgrenzung zu anderen Arbeiten}
