--- a/thesis/thesis/content/chapter-related-work.tex
+++ b/thesis/thesis/content/chapter-related-work.tex
@@ -2,34 +2,34 @@
 %
 \chapter{State of the Art}
 \label{sec:sota}
-
-
-\cleanchapterquote{A picture is worth a thousand words. An interface is worth a thousand pictures.}{Ben Shneiderman}{(Professor for Computer Science)}
-
-\Blindtext[2][1]
-
+Im diesem Kapitel soll zunächst auf den aktuellen Stand der Technik und gängige Praktiken und Konzepte eingangen werden. Da diese Arbeit die mobile Visualisierung von Informationsnetzen mit Hilfe von Augmented Reality thematisiert, ist es sinnvoll, Definitionen für die Platform und die zu visualisierenden Daten zu geben. Der Abschnitt ist in die folgenden Bereiche untergliedert.
+\begin{itemize}
+	\item \nameref{sec:sota:ar}
+	\item \nameref{sec:sota:mar}
+	\item \nameref{sec:sota:visualization} 
+\end{itemize}
+Zu erst werden Definition und Hintergrund des Begriffs \textbf {Augmented Reality (AR)} aufgegriffen und kurz erläutert. Anschließend folgt die Beleuchtung der Kategorie von Technologien, in die sich die Konzepte und der Prototyp dieser Arbeit einordnen lassen: \textbf{Mobile Augmented Reality (MAR)}. Nach dem der Fokus auf die Platform gelegt wurde, schließt das Kapitel mit einer Zusammenfassung zur Motivation und Methodik der \textbf{\nameref{sec:sota:visualization}}.
 \section{Augmented Reality (AR)}
 \label{sec:sota:ar}
-
-\Blindtext[2][2]
+Unter dem Begriff \textbf{Augmented Reality (AR)} wird im Groben die Augmentierung oder auch Erweiterung der Realität durch computergestützte Systeme verstanden. Die Grundidee von AR ist die Anreicherung der realen, wahrnehmbaren Umwelt mit synthetischen, beispielsweise durch Software erzeugten Daten oder Informationen. Die Umsetzung dieses Konzeptes, für das Ivan E. Sutherland bereits 1968 Pionierarbeit leistete \cite{Sutherland1968}, erfolgt meist über visuelle Inhalte, die durch Head-Mounted-Displays oder andere See-Trough-Displays vermittelt werden. Die optische Wahrnehmung der realen Welt wird dabei zusätzlich um virtuelle visuelle, auditive oder sogar haptische Eindrücke erweitert \cite{Feiner1997}. Um dem Nutzer einen Eindruck von Orientierung und Position zu vermitteln ist die Anwendung von Tracking-Technologien notwendig. \textbf{Tracking} bezeichnet hierbei die kontinuierliche Identifikation der Position und Orientierung \cite{Perey2013} von Gegenständen oder Personen in einem dreidimensionalen Bezugssystem.
+Der Einsatz von AR-Technologien motiviert durch die besondere Möglichkeit, verborgene Informationen nach außen zu kehren, die andernfalls nicht wahrzunehmen sind. Involvierte Systeme streben dabei eine immer stärkere Immersion des Nutzers sowie eine stetige Verbesserung des Realitätsempfindens an. In diesem Sinne kann man AR auch als Erweiterung der menschlischen Wahrnehmung verstehen. Abgesehen von bereits erprobten Anwendungsfällen in Medizin, Bildung, Bauingenieurswesen und Unterhaltung bietet AR vor allem im Bereich der Informationsvisualisierung großes Potential. 
 
 \section{Mobile Augmented Reality (MAR)}
 \label{sec:sota:mar}
+Lange Zeit waren Überlegungen und Konzepte zum Thema Augmented Reality an stationäre, unhandliche Rechensysteme gebunden.\textbf{Mobile Augmented Reality (MAR)} bezeichnet die Anwendung von AR-Technologien in Kombination mit mobilen Platformen. Obwohl es bei Betrachtung des Konzeptes ``Augmented Reality'' intuitiv erscheinent, dass Mobilität und uneingeschränkte Bewegungsfreiheit ein tragender Faktor für die Sinnhaftigkeit von AR-Systemen darstellen, gelang es Feiner et al. erst 1997 mit der ``Touring- Machine'' eine mobile AR-Anwendung zu implementieren \cite{Feiner1997}. Konkret handelt es sich um eine Anwendung zur Erforschung des Universitäts-Campus der Columbia University in New York. Der Nutzer trägt ein HMD und einen Rucksack, in dem sich ein Laptopcomputer befindet, der für Berechnungen und 3D-Visualisierungen verantwortlich ist. Dabei wird er bei der Navigation auf dem Geländes mit Einblendungen von Textlabeln auf dem HMD unterstützt. Forschungsarbeiten wie die von Feiner haben schon früh aufzeigen können, dass die Kombination von Mobile Computing und Augmented Reality großes Potential haben
+
 \subsection{Hintergrund}
+Die erste Arbeit 
 \subsection{Stand der Technik}
 
 \Blindtext[3][2]
 
-\section{Informationsnetze}
-\label{sec:sota:inets}
 
-\Blindtext[4][2]
-
-\section{Visualisierung von Informationsnetzen}
+\section{Graphvisualisierung}
 \label{sec:sota:visualization}
-
-\subsection{Informationsnetzanalyse}
-\subsection{Eigenschaften guter Visualisierung}
+\subsection{Graphen}
+\subsection{Aufgaben der Visualisierung: Visual Queries}
+\subsection{Eigenschaften guter Graphvisualisierung}
 \subsection{Strategien zur Vermeidung von Clutter}
-\subsection{Bestehende Ansätze im Bereich AR}
+\subsection{Bestehende Ansätze im Bereich Augmented Reality}
 \Blindtext[2][1]
