--- a/thesis/thesis/my-thesis-setup.tex
+++ b/thesis/thesis/my-thesis-setup.tex
@@ -46,7 +46,7 @@
 % **************************************************
 % Load and Configure Packages
 % **************************************************
-\usepackage[english]{babel} % babel system, adjust the language of the content
+\usepackage[ngerman]{babel} % babel system, adjust the language of the content
 \PassOptionsToPackage{% setup clean thesis style
     figuresep=colon,%
     sansserif=false,%
