--- a/thesis/thesis/my-thesis.tex
+++ b/thesis/thesis/my-thesis.tex
@@ -31,10 +31,10 @@
 % --------------------------
 % rename document parts
 % --------------------------
-%\renewcaptionname{ngerman}{\figurename}{Abb.}
-%\renewcaptionname{ngerman}{\tablename}{Tab.}
-\renewcaptionname{english}{\figurename}{Abb.}
-\renewcaptionname{english}{\tablename}{Tab.}
+\renewcaptionname{ngerman}{\figurename}{Abb.}
+\renewcaptionname{ngerman}{\tablename}{Tab.}
+%\renewcaptionname{english}{\figurename}{Abb.}
+%\renewcaptionname{english}{\tablename}{Tab.}
 
 % --------------------------
 % Front matter
@@ -52,7 +52,7 @@
 \cleardoublepage
 %
 \setcounter{tocdepth}{2}		% define depth of toc
-\renewcommand*\contentsname{Inhaltsverzeichnis}
+
 \tableofcontents				% display table of contents
 \cleardoublepage
 
