--- a/thesis/thesis/content/chapter-related-work.tex
+++ b/thesis/thesis/content/chapter-related-work.tex
@@ -11,12 +11,11 @@ Im diesem Kapitel soll zunächst auf den aktuellen Stand der Technik und gängig
 Zu erst werden Definition und Hintergrund des Begriffs \textbf {Augmented Reality (AR)} aufgegriffen und kurz erläutert. Anschließend folgt die Beleuchtung der Kategorie von Technologien, in die sich die Konzepte und der Prototyp dieser Arbeit einordnen lassen: \textbf{Mobile Augmented Reality (MAR)}. Nach dem der Fokus auf die Platform gelegt wurde, schließt das Kapitel mit einer Zusammenfassung zur Motivation und Methodik der \textbf{\nameref{sec:sota:visualization}}.
 \section{Augmented Reality (AR)}
 \label{sec:sota:ar}
-Unter dem Begriff \textbf{Augmented Reality (AR)} wird im Groben die Augmentierung oder auch Erweiterung der Realität durch computergestützte Systeme verstanden. Die Grundidee von AR ist die Anreicherung der realen, wahrnehmbaren Umwelt mit synthetischen, beispielsweise durch Software erzeugten Daten oder Informationen. Die Umsetzung dieses Konzeptes, für das Ivan E. Sutherland bereits 1968 Pionierarbeit leistete \cite{Sutherland1968}, erfolgt meist über visuelle Inhalte, die durch Head-Mounted-Displays oder andere See-Trough-Displays vermittelt werden. Die optische Wahrnehmung der realen Welt wird dabei zusätzlich um virtuelle visuelle, auditive oder sogar haptische Eindrücke erweitert \cite{Feiner1997}. Um dem Nutzer einen Eindruck von Orientierung und Position zu vermitteln ist die Anwendung von Tracking-Technologien notwendig. \textbf{Tracking} bezeichnet hierbei die kontinuierliche Identifikation der Position und Orientierung \cite{Perey2013} von Gegenständen oder Personen in einem dreidimensionalen Bezugssystem.
-Der Einsatz von AR-Technologien motiviert durch die besondere Möglichkeit, verborgene Informationen nach außen zu kehren, die andernfalls nicht wahrzunehmen sind. Involvierte Systeme streben dabei eine immer stärkere Immersion des Nutzers sowie eine stetige Verbesserung des Realitätsempfindens an. In diesem Sinne kann man AR auch als Erweiterung der menschlischen Wahrnehmung verstehen. Abgesehen von bereits erprobten Anwendungsfällen in Medizin, Bildung, Bauingenieurswesen und Unterhaltung bietet AR vor allem im Bereich der Informationsvisualisierung großes Potential. 
+Unter dem Begriff \textbf{Augmented Reality (AR)} wird im Groben die Augmentierung oder auch Erweiterung der Realität durch computergestützte Systeme verstanden. Die Grundidee von AR ist die Anreicherung der realen, wahrnehmbaren Umwelt mit synthetischen, beispielsweise durch Software erzeugten Daten oder Informationen. Die Umsetzung dieses Konzeptes, für das Ivan E. Sutherland bereits 1968 Pionierarbeit leistete \cite{Sutherland1968}, erfolgt meist über visuelle Inhalte, die durch Head-Mounted-Displays oder andere See-Trough-Displays vermittelt werden. Involvierte Systeme streben dabei eine immer stärkere Immersion des Nutzers an: Die optische Wahrnehmung der realen Welt wird zusätzlich um virtuelle visuelle, auditive oder sogar haptische Eindrücke erweitert \cite{Feiner1997}. Um einen Eindruck von Orientierung und Position zu vermitteln, ist die Anwendung von Tracking-Technologien notwendig. \textbf{Tracking} bezeichnet hierbei die kontinuierliche Identifikation der Position und Orientierung \cite{Perey2013} von Gegenständen oder Personen in einem dreidimensionalen Bezugssystem. Der Einsatz von AR-Technologien motiviert durch die besondere Möglichkeit, verborgene Informationen nach außen zu kehren, die andernfalls nicht wahrzunehmen sind. Das Realitätsempfinden des Nutzers wird durch anwendungs- und domänenspezifische Reize erweitert und definiert. In diesem Sinne kann AR auch als Erweiterung der menschlichen Wahrnehmung verstanden werden. Abgesehen von bereits erprobten Anwendungsfällen in Medizin, Bildung, Bauingenieurswesen und Unterhaltung bietet AR vor allem im Bereich der Informationsvisualisierung großes Potential. 
 
 \section{Mobile Augmented Reality (MAR)}
 \label{sec:sota:mar}
-Lange Zeit waren Überlegungen und Konzepte zum Thema Augmented Reality an stationäre, unhandliche Rechensysteme gebunden.\textbf{Mobile Augmented Reality (MAR)} bezeichnet die Anwendung von AR-Technologien in Kombination mit mobilen Platformen. Obwohl es bei Betrachtung des Konzeptes ``Augmented Reality'' intuitiv erscheinent, dass Mobilität und uneingeschränkte Bewegungsfreiheit ein tragender Faktor für die Sinnhaftigkeit von AR-Systemen darstellen, gelang es Feiner et al. erst 1997 mit der ``Touring- Machine'' eine mobile AR-Anwendung zu implementieren \cite{Feiner1997}. Konkret handelt es sich um eine Anwendung zur Erforschung des Universitäts-Campus der Columbia University in New York. Der Nutzer trägt ein HMD und einen Rucksack, in dem sich ein Laptopcomputer befindet, der für Berechnungen und 3D-Visualisierungen verantwortlich ist. Dabei wird er bei der Navigation auf dem Geländes mit Einblendungen von Textlabeln auf dem HMD unterstützt. Forschungsarbeiten wie die von Feiner haben schon früh aufzeigen können, dass die Kombination von Mobile Computing und Augmented Reality großes Potential haben
+Lange Zeit waren Überlegungen und Konzepte zum Thema Augmented Reality an stationäre, unhandliche Rechensysteme gebunden.   \textbf{Mobile Augmented Reality (MAR)} bezeichnet die Anwendung von AR-Technologien in Kombination mit mobilen Platformen. Obwohl es bei Betrachtung des Konzeptes ``Augmented Reality'' intuitiv erscheinent, dass Mobilität und uneingeschränkte Bewegungsfreiheit ein tragender Faktor für die Sinnhaftigkeit von AR-Systemen darstellen, gelang es Feiner et al. erst 1997 mit der ``Touring- Machine'' eine mobile AR-Anwendung zu implementieren \cite{Feiner1997}. Konkret handelt es sich um eine Anwendung zur Erforschung des Universitäts-Campus der Columbia University in New York. Der Nutzer trägt ein HMD und einen Rucksack, in dem sich ein Laptopcomputer befindet, der für Berechnungen und 3D-Visualisierungen verantwortlich ist. Er wird bei der Navigation auf dem Geländes mit Einblendungen von Textlabeln auf dem HMD unterstützt. Forschungsarbeiten wie die von Feiner haben schon früh aufzeigen können, dass die Kombination von Mobile Computing und Augmented Reality großes Potential haben
 
 \subsection{Hintergrund}
 Die erste Arbeit 
